--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 #add-btn {
     padding: 10px;
-    margin: 20px;
+    margin-bottom:  20px;
     background-color: brown;
     border: none;
     color: whitesmoke;
