--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ h1 {
     background-color: brown;
 }
 
+span {
+    color: red;
+}
+
 table, tr, td, th {
     border: solid black;
     border-collapse: collapse;
