--- a/style.css
+++ b/style.css
@@ -17,3 +17,15 @@ h1 {
     font-size: 1. 75rem;
     margin-bottom: 0;
 }
+
+input {
+    display: block;
+    margin: 10px auto;
+    width: 200px;
+    height: 20px;
+    border-radius: 4px;
+    border: 1px solid yellow;
+    font-family: inherit;
+    font-size: 1rem;
+    padding: 10px;
+}
