--- a/style.css
+++ b/style.css
@@ -29,3 +29,14 @@ input {
     font-size: 1rem;
     padding: 10px;
 }
+
+button {
+    border-radius: 4px;
+    border: none;
+    background-color: red;
+    color: white;
+    font-family: inherit;
+    font-size: 1rem;
+    margin: 10px;
+    padding: 10px 20px;
+}
