--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ section {
 }
 
 h1 {
-    color: yellow;
+    color: rgb(119, 0, 255);
     font-size: 1.75em;
     margin-bottom: 0;
 }
@@ -25,7 +25,7 @@ input {
     width: 200px;
     height: 20px;
     border-radius: 4px;
-    border: 1px solid yellow;
+    border: 1px solid rgb(119, 0, 255);
     font-family: inherit;
     font-size: 1em;
     padding: 10px;
@@ -34,7 +34,7 @@ input {
 button {
     border-radius: 4px;
     border: none;
-    background-color: red;
+    background-color: rgb(0, 217, 255);
     color: white;
     font-family: inherit;
     font-size: 1em;
@@ -43,7 +43,7 @@ button {
 }
 
 button:hover {
-    color: red;
+    color: rgb(0, 217, 255);
     background-color: white;
 }
 
